[gd_scene load_steps=4 format=3 uid="uid://qxndwvr51d61"]

[ext_resource type="Script" path="res://SaveSelect/SaveSelect.gd" id="1_sdoub"]
[ext_resource type="PackedScene" uid="uid://vscxwwb0ewfm" path="res://SaveSlot/SaveSlot.tscn" id="2_hy05h"]
[ext_resource type="PackedScene" uid="uid://rp4xkflxsbx8" path="res://DestinySelect/DestinySelect.tscn" id="3_3xsho"]

[node name="SaveSelect" type="Node"]
script = ExtResource("1_sdoub")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MC" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="ContentContainer" type="VBoxContainer" parent="UI/MC"]
layout_mode = 2

[node name="BackButton" type="Button" parent="UI/MC/ContentContainer"]
layout_mode = 2
text = "뒤로가기"

[node name="SaveSlotContainer" type="VBoxContainer" parent="UI/MC/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SaveSlot" parent="UI/MC/ContentContainer/SaveSlotContainer" instance=ExtResource("2_hy05h")]
layout_mode = 2
saveNum = 1

[node name="SaveSlot2" parent="UI/MC/ContentContainer/SaveSlotContainer" instance=ExtResource("2_hy05h")]
layout_mode = 2
saveNum = 2

[node name="SaveSlot3" parent="UI/MC/ContentContainer/SaveSlotContainer" instance=ExtResource("2_hy05h")]
layout_mode = 2
saveNum = 3

[node name="DestinySelect" parent="UI" instance=ExtResource("3_3xsho")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="UI/MC/ContentContainer/BackButton" to="." method="goTitle"]
[connection signal="continueClicked" from="UI/MC/ContentContainer/SaveSlotContainer/SaveSlot" to="." method="continueGame"]
[connection signal="deleteClicked" from="UI/MC/ContentContainer/SaveSlotContainer/SaveSlot" to="." method="deleteData"]
[connection signal="newGameClicked" from="UI/MC/ContentContainer/SaveSlotContainer/SaveSlot" to="." method="newGame"]
[connection signal="continueClicked" from="UI/MC/ContentContainer/SaveSlotContainer/SaveSlot2" to="." method="continueGame"]
[connection signal="deleteClicked" from="UI/MC/ContentContainer/SaveSlotContainer/SaveSlot2" to="." method="deleteData"]
[connection signal="newGameClicked" from="UI/MC/ContentContainer/SaveSlotContainer/SaveSlot2" to="." method="newGame"]
[connection signal="continueClicked" from="UI/MC/ContentContainer/SaveSlotContainer/SaveSlot3" to="." method="continueGame"]
[connection signal="deleteClicked" from="UI/MC/ContentContainer/SaveSlotContainer/SaveSlot3" to="." method="deleteData"]
[connection signal="newGameClicked" from="UI/MC/ContentContainer/SaveSlotContainer/SaveSlot3" to="." method="newGame"]
[connection signal="destiny_select_cancel" from="UI/DestinySelect" to="." method="newGameCancel"]
[connection signal="destiny_selected" from="UI/DestinySelect" to="." method="newGameStart"]
